<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".planninglsi1">

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginBottom="40dp"
    android:background="@android:color/white">

    <TableRow

        android:background="@color/colorGreen">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/col1"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

    </TableRow>

    <TableRow

        android:background="@color/backgroundCardLightBlue">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/mo"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/da"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/lo"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/m1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/d1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/l1"
            android:textSize="18sp" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/m2"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/d2"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/l2"
            android:textSize="18sp" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/m3"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/d3"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/l3"
            android:textSize="18sp" />

    </TableRow>
    <TableRow>
        <TextView></TextView>
    </TableRow>
    <TableRow

        android:background="@color/colorGreen">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/col2"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

    </TableRow>

    <TableRow

        android:background="@color/backgroundCardLightBlue">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/mo"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/da"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/lo"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/m4"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/d4"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/l4"
            android:textSize="18sp" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/m55"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/d5"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/l55"
            android:textSize="18sp" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/m6"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/d6"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/l6"
            android:textSize="18sp" />

    </TableRow>
    <TableRow>
        <TextView></TextView>
    </TableRow>
    <TableRow

        android:background="@color/colorGreen">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/col3"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

    </TableRow>

    <TableRow

        android:background="@color/backgroundCardLightBlue">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/mo"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/da"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/lo"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/m7"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/d7"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/l7"
            android:textSize="18sp" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/m8"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/d8"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/l8"
            android:textSize="18sp" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/m9"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/d9"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/l9"
            android:textSize="18sp" />

    </TableRow>



</TableLayout>
    </RelativeLayout>
</ScrollView>